Add % sign to trophy rarity in trophy notification message

--- a/lib/holy_rider/views/roda/trophy.slim
+++ b/lib/holy_rider/views/roda/trophy.slim
@@ -8,7 +8,8 @@ html[xmlns:cc='http://creativecommons.org/ns#']
     meta[name='viewport' content='width=device-width, initial-scale=1']
     meta[content='text/html; charset=utf-8' http-equiv='Content-Type']
     meta[content="#{trophy_title}" name='title']
-    meta[content="#{trophy_description} <br>(#{trophy_type} - #{trophy_rarity})" name='description']
+    meta[content="#{trophy_description} <br>(#{trophy_type} - #{trophy_rarity})%"
+      name='description']
     meta[content="#{trophy_icon_url}" property='og:image']
   body[style='padding: 0px 0px 5px 20px;']
     h1
